--- a/theme/404.html
+++ b/theme/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/png" href="../docs/API/images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="https://editor.flotiq.com/images/favicon.ico"/>
     <style>
         body {
             margin: 0;
